<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_above="@+id/txt_logo"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:layout_gravity="center"
        android:src="@mipmap/ic_logo" />
    <TextView
        android:id="@+id/txt_logo"
        android:layout_above="@+id/edit_code"
        android:layout_width="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:textColor="#00AFF0"
        android:layout_centerHorizontal="true"
        android:text="@string/st_welcome"
        />

    <EditText
        android:id="@+id/edit_code"
        android:layout_width="match_parent"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:textColor="#000000"
        android:layout_marginLeft="16dp"
        android:layout_centerInParent="true"
        android:inputType="number"
        android:maxLines="1"
        android:layout_marginRight="16dp"
        android:padding="10dp"
        android:hint="@string/st_Otp"
        android:background="@drawable/bg_login_corner_user_name"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/txt_suggest"
        android:layout_width="match_parent"
        android:textSize="16sp"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/edit_code"
        android:text="@string/st_done_register"
        android:layout_marginRight="20dp"
        android:layout_marginTop="16dp"
        android:textColor="#000000"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/txt_no_receive"
        android:layout_width="match_parent"
        android:textSize="16sp"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/txt_suggest"
        android:text="@string/st_not_receiver"
        android:layout_marginRight="20dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/color_common"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/txt_re_send_otp"
        android:layout_width="match_parent"
        android:textSize="16sp"
        android:layout_marginLeft="40dp"
        android:layout_below="@+id/txt_no_receive"
        android:text="@string/st_send_otp"
        android:layout_marginRight="20dp"
        android:drawablePadding="8dp"
        android:drawableLeft="@mipmap/ic_next"
        android:layout_marginTop="16dp"
        android:textColor="@color/color_common"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txt_back_register"
        android:layout_width="match_parent"
        android:textSize="16sp"
        android:layout_marginLeft="40dp"
        android:layout_below="@+id/txt_re_send_otp"
        android:text="@string/st_back_register"
        android:layout_marginRight="20dp"
        android:drawablePadding="8dp"
        android:drawableLeft="@mipmap/ic_next"
        android:layout_marginTop="10dp"
        android:textColor="@color/color_common"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txt_done_register"
        android:layout_width="match_parent"
        android:textSize="16sp"
        android:padding="10dp"
        android:layout_marginLeft="16dp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/st_done"
        android:background="@drawable/bg_get_otp"
        android:layout_alignParentBottom="true"
        android:layout_margin="14dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:textColor="#ffffff"
        android:layout_height="wrap_content" />
</RelativeLayout>