<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:layout_above="@+id/txt_logo"
        android:layout_gravity="center"
        android:src="@mipmap/ic_logo" />
    <TextView
        android:id="@+id/txt_logo"
        android:layout_above="@+id/edit_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:gravity="center_horizontal"
        android:textSize="40sp"
        android:textColor="#00AFF0"
        android:layout_centerHorizontal="true"
        android:text="@string/st_wassii"
       />

    <EditText
        android:id="@+id/edit_username"
        android:layout_width="match_parent"
        android:textSize="16sp"
        android:textColor="#000000"
        android:layout_marginLeft="16dp"
        android:layout_centerInParent="true"
        android:maxLines="1"
        android:inputType="number"
        android:layout_marginRight="16dp"
        android:padding="10dp"
        android:hint="@string/st_phone_number"
        android:background="@drawable/bg_login_corner_user_name"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:textSize="16sp"
        android:padding="10dp"
        android:layout_below="@+id/edit_username"
        android:layout_marginLeft="16dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/st_phone_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_login_corner_user_name"
        android:textColor="#000000"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txt_login"
        android:layout_width="match_parent"
        android:textSize="16sp"
        android:padding="14dp"
        android:layout_below="@+id/edit_password"
        android:layout_marginLeft="16dp"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="16dp"
        android:text="@string/st_login"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:background="@drawable/bg_get_otp"
        android:textColor="#FFFFFF"
        android:layout_height="wrap_content" />


    <!--<LinearLayout-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_below="@+id/txt_login"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:orientation="horizontal">-->
        <!--<ImageView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:id="@+id/image_england"-->
            <!--android:src="@mipmap/ic_england"-->
            <!--android:layout_height="wrap_content" />-->
        <!--<ImageView-->
            <!--android:src="@mipmap/ic_vietnam_press"-->
            <!--android:layout_marginLeft="40dp"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:id="@+id/image_vietnam"-->
            <!--android:layout_height="wrap_content" />-->
    <!--</LinearLayout>-->
    <TextView
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:padding="14dp"
        android:layout_marginRight="40dp"
        android:id="@+id/txtSignUp"
        android:textColor="@color/color_common"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/st_sign_up"/>
    <TextView
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:padding="14dp"
        android:id="@+id/txt_forget_password"
        android:textColor="@color/color_common"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/st_forget_password"/>
</RelativeLayout>