<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:padding="10dp"
            android:src="@mipmap/ic_logo" />

        <TextView
            android:id="@+id/txt_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:gravity="center_horizontal"
            android:text="@string/st_welcome"
            android:textColor="#00AFF0"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/edit_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:inputType="number"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_login_corner_user_name"
            android:hint="@string/st_Otp"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_get_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_otp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:drawableLeft="@mipmap/ic_next"
            android:padding="10dp"
            android:text="@string/st_send_otp"
            android:textColor="@color/color_common"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edit_password_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_get_otp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_login_corner_user_name"
            android:hint="@string/st_input_new_pass"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edit_re_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_password_new"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_login_corner_user_name"
            android:hint="@string/st_input_new_pass_re"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/edit_re_password"
            android:layout_centerHorizontal="true"
            android:layout_margin="14dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_get_otp"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/st_done"
            android:textColor="#ffffff"
            android:textSize="16sp" />
    </RelativeLayout>

</ScrollView>
