<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_above="@+id/txt_logo"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:layout_gravity="center"
        android:src="@mipmap/ic_logo" />
    <TextView
        android:id="@+id/txt_logo"
        android:layout_above="@+id/edit_passs"
        android:layout_width="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_height="wrap_content"

        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:textColor="#00AFF0"
        android:layout_centerHorizontal="true"
        android:text="@string/st_welcome"
        />


    <EditText
        android:id="@+id/edit_passs"
        android:layout_width="match_parent"
        android:textSize="16sp"
        android:padding="10dp"
        android:layout_centerInParent="true"
        android:layout_below="@+id/edit_name"
        android:layout_marginLeft="16dp"
        android:maxLines="1"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword"
        android:hint="@string/st_input_current_pass"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_login_corner_user_name"
        android:textColor="#000000"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edit_password_new"
        android:layout_width="match_parent"
        android:textSize="16sp"
        android:padding="10dp"
        android:layout_below="@+id/edit_passs"
        android:layout_marginLeft="16dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/st_input_new_pass"
        android:inputType="textPassword"
        android:maxLines="1"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_login_corner_user_name"
        android:textColor="#000000"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/edit_re_password"
        android:layout_width="match_parent"
        android:textSize="16sp"
        android:padding="10dp"
        android:layout_below="@+id/edit_password_new"
        android:layout_marginLeft="16dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/st_input_new_pass_re"
        android:maxLines="1"
        android:inputType="textPassword"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_login_corner_user_name"
        android:textColor="#000000"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txt_done"
        android:layout_width="match_parent"
        android:textSize="16sp"
        android:padding="10dp"
        android:layout_marginLeft="16dp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/st_done"
        android:background="@drawable/bg_get_otp"
        android:layout_alignParentBottom="true"
        android:layout_margin="14dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:textColor="#ffffff"
        android:layout_height="wrap_content" />
</RelativeLayout>