<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:padding="10dp"
            android:src="@mipmap/ic_logo" />

        <TextView
            android:id="@+id/txt_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            android:gravity="center_horizontal"
            android:text="@string/st_welcome"
            android:textColor="#00AFF0"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_below="@+id/txt_logo"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/bg_login_corner_user_name"
            android:hint="@string/st_name"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edit_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_name"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="16dp"
            android:singleLine="true"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_login_corner_user_name"
            android:hint="@string/st_phone_number"
            android:inputType="number"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_phone_number"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:singleLine="true"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_login_corner_user_name"
            android:hint="@string/st_phone_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edit_re_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_password"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:singleLine="true"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_login_corner_user_name"
            android:hint="@string/st_re_enter"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_get_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="14dp"
            android:layout_below="@+id/edit_re_password"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_get_otp"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/st_get_otp"
            android:textColor="#ffffff"
            android:textSize="16sp" />
    </RelativeLayout>

</ScrollView>
